--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  url_strategy: ^0.2.0
+  beamer: ^1.6.0
+
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +68,16 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  fonts:
+    - family: NotoSansBold
+      fonts:      
+        - asset: assets/NotoSansTC-Bold.otf
+    - family: NotoSansMedium
+      fonts:
+        - asset: assets/NotoSansTC-Medium.otf    
+    - family: NotoSansRegular
+      fonts:
+        - asset: assets/NotoSansTC-Regular.otf
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
