--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   url_strategy: ^0.2.0
   beamer: ^1.6.0
+  reorderables: ^0.6.0
+  flutter_svg: ^2.0.9
 
 
 dev_dependencies:
@@ -65,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
   fonts:
     - family: NotoSansBold
