--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,19 @@ dependencies:
   firebase_core: 2.16.0
   cloud_firestore: 4.9.2
   firebase_storage: 11.2.7
-  firebase_auth: 4.10.0
+  firebase_auth: 4.10.0  
+  google_sign_in: ^6.1.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   url_strategy: ^0.2.0
   beamer: ^1.6.0
-  reorderables: ^0.6.0
   flutter_svg: ^2.0.9
+  image_picker: ^1.0.7
+  shared_preferences: ^2.0.18
+  intl: ^0.18.1
+  flutter_quill: ^9.2.12
+
 
 
 dev_dependencies:
@@ -69,6 +74,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/drag-vertical.svg
   #   - images/a_dot_ham.jpeg
   fonts:
     - family: NotoSansBold
