--- a/firebase.json
+++ b/firebase.json
@@ -22,6 +22,7 @@
       "**/.*",
       "**/node_modules/**"
     ],
+    "appAssociation": "AUTO",
     "rewrites": [
       { "source": "/activity/**", "dynamicLinks": true},
       {
