--- a/firebase.json
+++ b/firebase.json
@@ -24,7 +24,7 @@
     ],
     "appAssociation": "AUTO",
     "rewrites": [
-      { "source": "/activity/**", "dynamicLinks": true},
+      { "source": "/**", "dynamicLinks": true},
       {
         "source": "**",
         "destination": "/index.html"
