--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  firebase_core: 2.16.0
-  cloud_firestore: 4.9.2
-  firebase_storage: 11.2.7
-  firebase_auth: 4.10.0  
+  firebase_core: 2.30.1
+  cloud_firestore: 4.17.2
+  firebase_storage: 11.7.4 
+  firebase_auth: 4.19.4 
+  firebase_dynamic_links: ^5.3.6
   google_sign_in: ^6.1.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
