--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,8 @@ dependencies:
   flutter_svg: ^2.0.9
   image_picker: ^1.0.7
   shared_preferences: ^2.0.18
-  intl: ^0.18.1
-  flutter_quill: ^9.2.12
+  intl: ^0.19.0
+  flutter_quill: 9.4.7
   uuid: ^4.3.3
   percent_indicator: ^4.2.3  
   url_launcher: ^6.2.1
