ADD: 發送行前通知 UPDATE: 其他小更改

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,9 @@ flutter:
     - family: NotoSansRegular
       fonts:
         - asset: assets/NotoSansTC-Regular.otf
+    - family: NotoSansBlack
+      fonts:
+        - asset: assets/NotoSansTC-Black.otf
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
